# cpp-template

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh
.github/workflows/: build.yml
.hooks/: pre-commit
conan/: conanfile.txt
include/: example.h
src/: main.cpp
tests/: test1.cpp
